# pubstyle

./: .gitignore  README.md  pyproject.toml
pubstyle/: __init__.py  core.py  example.py  pubstyle.mplstyle
